--- a/src/index.html
+++ b/src/index.html
@@ -400,7 +400,7 @@
               </div>
             </div>
 
-            <div class="grid__item grid__item--8-12">
+            <div class="grid__item grid__item--8-12 contact-us__form">
               <form action="" method="get">
                 <input
                   name="name"
